tests/test_files_pa3/SemanticErrors/badScope_3.ic
class A {

     static void main(string[] args){}
     
     void badScope_3(String s) {
            
           int x;
            
           {
                int a = s;
           }
           
           int a;

     }
     
     boolean a;
    
}